# openapi.json
@@ -839,6 +839,18 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "name": "status",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "enum": [
+                "aktif",
+                "arsip"
+              ],
+              "type": "string"
+            }
           }
         ],
         "responses": {
